--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ header {
 
 .container {
   width: 1200px;
-  height: 251px;
   padding-left: 15px;
   padding-right: 15px;
   /* outline: 2px solid; */
@@ -150,6 +149,7 @@ ul {
 }
 
 .contacts-list .link {
+  display: flex;
   color: var(--title-text-color);
   text-decoration: none;
   font-family: Roboto;
@@ -162,6 +162,21 @@ ul {
 .contacts-list .link:focus,
 .contacts-list .link:hover {
   color: var(--accent-color);
+}
+
+.icon-mail {
+  margin-right: 10px;
+  width: 16px;
+  height: 12px;
+  fill: currentColor;
+}
+
+.icon-phone {
+  margin-right: 10px;
+  width: 10px;
+  height: 16px;
+  fill: currentColor;
+  background-position: center;
 }
 
 /*name*/
@@ -298,7 +313,8 @@ button {
 /*feature-list*/
 
 .section {
-  padding: 94px 0px 94px 0px;
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .section-portfolio {
@@ -311,7 +327,6 @@ button {
 
 .feature-list {
   display: flex;
-  height: 101px;
   flex-wrap: wrap;
 }
 
@@ -328,7 +343,7 @@ button {
   color: var(--primery-text-color);
 }
 
-.item::before {
+/* .item::before {
   display: block;
   content: '';
   height: 120px;
@@ -336,7 +351,7 @@ button {
   background-size: 70px;
   background-repeat: no-repeat;
   background-color: var(--fon-button-color);
-}
+} */
 
 .icon-antenna::before {
   background-image: url(../images/antenna.svg);
