--- a/css/main.css
+++ b/css/main.css
@@ -354,7 +354,7 @@ button {
 } */
 
 .icon-antenna::before {
-  background-image: url(../images/antenna.svg);
+  background-image: url(../images/antenna\ \(1\).svg);
 }
 
 .icon-clock::before {
@@ -600,9 +600,14 @@ img {
 
 /*Footer*/
 
+.order-adres {
+  display: flex;
+  /* align-items: center; */
+}
+
 .order {
   align-items: baseline;
-  display: flex;
+  display: block;
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: var(--title-fon-color);
@@ -627,47 +632,96 @@ img {
   text-decoration: none;
 }
 
-.footer-container {
-  display: block;
-  height: 80px;
-  padding-left: 516px;
-  padding-bottom: 100px;
+.foot {
+  display: flex;
+  align-items: baseline;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
+
+.footer-container {
+  margin-left: 70px;
+  align-items: baseline;
+}
+
 .order-sets {
-  /* display: flex; */
-  /* margin-top: 72px;
-  margin-left: 70px; */
+  margin-bottom: 20px;
   color: var(--primery-fon-color);
-  font-size: 14px;
+  font-family: Roboto;
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
+  font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  text-align: left;
+  text-transform: uppercase;
 }
 .sets-list {
   display: flex;
+  height: 44px;
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
 }
-.icon-instagram {
-  background-color: rgba(255, 255, 255, 0, 1);
+
+
+
+/* .icon-instagram {
+  display: flex;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.icon-twitter {
+  display: flex;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+  fill: currentColor;
+}
+.icon-facebook {
+  display: flex;
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  margin-right: 10px;
+  fill: currentColor; */
+}
+.footer-icon {
+  fill: currentColor;
+}
+
+.icons {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  background-position: center;
+  color: #ffffff;
+}
+.icon-button {
+  margin-right: 10px;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
   height: 44px;
   width: 44px;
-  display: block;
-  margin-right: 10px;
+  list-style: none;
+  background-color: rgba(255, 255, 255, 0.1);
+  fill: currentColor;
 }
-.icon-twitter {
-  height: 44px;
-  width: 44px;
-  margin-right: 10px;
+
+.icon-button.item:nth-child(4n) {
+  margin-right: 0px;
 }
-.icon-facebook {
-  height: 44px;
-  width: 44px;
-  margin-right: 10px;
-}
-.icon-linkedin {
-  height: 44px;
-  width: 44px;
-  margin-right: 10px;
+
+.icons:hover {
+  background-color: var(--accent-color);
 }
