--- a/css/main.css
+++ b/css/main.css
@@ -329,12 +329,12 @@ button {
 	flex-wrap: wrap;
 }
 
-.feature-list .item {
+.feature-list .items {
 	width: 270px;
 	margin-right: 30px;
 }
 
-.feature-list .item:nth-child(4n) {
+.feature-list .items:nth-child(4n) {
 	margin-right: 0;
 }
 
@@ -342,18 +342,18 @@ button {
 	color: var(--primery-text-color);
 }
 
-/* .item::before {
-  display: block;
-  content: '';
-  height: 120px;
-  background-position: center;
-  background-size: 70px;
-  background-repeat: no-repeat;
-  background-color: var(--fon-button-color);
-} */
+.items::before {
+	display: block;
+	content: "";
+	height: 120px;
+	background-position: center;
+	background-size: 70px;
+	background-repeat: no-repeat;
+	background-color: var(--fon-button-color);
+}
 
 .icon-antenna::before {
-	background-image: url(../images/antenna\\(1\).svg);
+	background-image: url(../images/antenna.svg);
 }
 
 .icon-clock::before {
@@ -556,7 +556,7 @@ button {
 	margin-right: 0px;
 }
 
-.item {
+.items {
 	padding: 0px;
 	margin-bottom: 0px;
 }
