--- a/css/main.css
+++ b/css/main.css
@@ -454,10 +454,6 @@ button {
 	margin-left: 0px;
 	width: 270px;
 	height: 428px;
-
-	/* border: 1px solid var(--second-text-color);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.14), 0px 2px 1px; */
 }
 
 .comand-list {
@@ -468,6 +464,7 @@ button {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
 	border-top: none;
+	background-color: var(--primery-fon-color);
 }
 
 .comand-container {
@@ -483,6 +480,10 @@ button {
 	margin: 0px;
 	list-style: none;
 	justify-content: center;
+}
+
+.container-icon {
+	padding-top: 16px;
 }
 
 .icons-comand {
@@ -646,7 +647,67 @@ img {
 	height: auto;
 }
 
-/*Footer*/
+/* ______________  */
+
+.section-clients {
+	padding-top: 94px;
+	padding-bottom: 94px;
+}
+
+.container {
+	/* align-items: baseline; */
+}
+
+.section-title-clients {
+	margin-bottom: 50px;
+	color: var(--primery-text-color);
+	font-style: normal;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.17;
+	text-align: center;
+	letter-spacing: 0.03em;
+}
+
+.section-list-clients {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.section-item-clients {
+	margin-right: 30px;
+	width: 170px;
+	height: 92px;
+	display: flex;
+	border: 1px solid rgba(175, 177, 184, 1);
+	border-radius: 4px;
+}
+.section-item-clients:nth-child(6) {
+	margin-right: 0px;
+}
+.client-list {
+	fill: currentColor;
+	width: 106px;
+	height: 60px;
+}
+
+.icons-clients {
+	display: flex;
+	height: 100%;
+	width: 100%;
+	/* border-radius: 50%; */
+	align-items: center;
+	justify-content: center;
+	background-position: center;
+	color: rgba(175, 177, 184, 1);
+}
+
+.icons-clients:hover {
+	color: rgba(33, 150, 243, 1);
+	fill: rgba(33, 150, 243, 1);
+}
+
+/*--Page Footer--*/
 
 .order-adres {
 	display: flex;
