коригування бази icons.svg

--- a/images/icomoon/style.css
+++ b/images/icomoon/style.css
@@ -50,3 +50,7 @@ Single-colored icons can be modified like so:
 .icon-phone {
   width: 0.625em;
 }
+
+.icon-WebStudio {
+  width: 7.2001953125em;
+}
