--- a/css/main.css
+++ b/css/main.css
@@ -275,6 +275,7 @@ button {
 	color: var(--fon-button-color);
 	background-color: var(--accent-color);
 	border-color: var(--accent-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* navigation */
