--- a/css/main.css
+++ b/css/main.css
@@ -597,6 +597,10 @@ button {
 	margin-bottom: 0px;
 }
 
+.proect-section:hover {
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .proect-title {
 	margin-bottom: 30px;
 	margin-right: 30px;
